--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit>=1.32
-numpy>=1.24
-opencv-python-headless==4.8.1.78
+numpy==1.24.4
 Pillow>=9.5
+opencv-python-headless==4.8.1.78
+streamlit>=1.32
